# dataset

./: .env.example  .gitignore  README.md  com.dataset.daily-update.plist  com.dataset.daily-update.plist.example  fetch_all.py  pyproject.toml  update_daily.py  validate_data.py
src/dataset/: config.py  fetch.py  report.py  storage.py  update.py  validate.py
tests/: conftest.py  test_fetch.py  test_fetch_orchestration.py  test_integration.py  test_report.py  test_storage.py  test_update.py  test_validate.py
