[project]
name = "dataset"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "ccxt>=4.5.35",
    "pyarrow>=18.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
